Rewrite all configs

--- a/Lumbraco/Lumbraco.Demo/Config/LumbracoIndex.config
+++ b/Lumbraco/Lumbraco.Demo/Config/LumbracoIndex.config
@@ -1,26 +1,17 @@
-﻿<?xml version="1.0"?>
-<configuration>
-  <configSections>
-    <section name="LumbracoIndexSet" type="Lumbraco.Configuration.IndexConfiguration, Lumbraco"/>
-  </configSections>
-
-  <LumbracoIndexSet>
-    <IndexSets>
-      <IndexSet DocumentType="Product">
-        <IndexFields>
-          <IndexField FieldName="productName" IndexType="NOT_ANALYZED" StorageType="YES" TermVector="NO" FieldType="System.String"></IndexField>
-          <IndexField FieldName="casName" IndexType="NOT_ANALYZED" StorageType="YES" TermVector="NO" FieldType="System.String"></IndexField>
-          <IndexField FieldName="catName" IndexType="NOT_ANALYZED" StorageType="YES" TermVector="NO" FieldType="System.String"></IndexField>
-        </IndexFields>
-      </IndexSet>
-      <IndexSet DocumentType="Flower">
-        <IndexFields>
-          <IndexField FieldName="productName" IndexType="NOT_ANALYZED" StorageType="YES" TermVector="NO" FieldType="System.String"></IndexField>
-          <IndexField FieldName="casName" IndexType="NOT_ANALYZED" StorageType="YES" TermVector="NO" FieldType="System.String"></IndexField>
-          <IndexField FieldName="catName" IndexType="NOT_ANALYZED" StorageType="YES" TermVector="NO" FieldType="System.String"></IndexField>
-        </IndexFields>
-      </IndexSet>
-    </IndexSets>
-  </LumbracoIndexSet>
-</configuration>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<LumbracoIndexSet xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <IndexSets>
+    <IndexSet DocumentType="Product">
+      <IndexFields>
+        <IndexField FieldName="productName" IndexType="NOT_ANALYZED" StorageType="YES" TermVector="NO" FieldType="System.String" />
+        <IndexField FieldName="casName" IndexType="NOT_ANALYZED" StorageType="YES" TermVector="NO" FieldType="System.String" />
+      </IndexFields>
+    </IndexSet>
+    <IndexSet DocumentType="Flower">
+      <IndexFields>
+        <IndexField FieldName="productName" IndexType="NOT_ANALYZED" StorageType="YES" TermVector="NO" FieldType="System.String" />
+        <IndexField FieldName="casName" IndexType="NOT_ANALYZED" StorageType="YES" TermVector="NO" FieldType="System.String" />
+      </IndexFields>
+    </IndexSet>
+  </IndexSets>
+</LumbracoIndexSet>
