--- a/Lumbraco/Lumbraco.Demo/Web.config
+++ b/Lumbraco/Lumbraco.Demo/Web.config
@@ -52,6 +52,8 @@
 
     <add key="log4net.Config" value="config\log4net.config" />
 
+    <add key="LumbracoIndexPath" value="~/Config/LumbracoIndex.config"/>
+
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN" />
