--- a/Lumbraco/Lumbraco.EPiServer.Demo/Lumbraco.EPiServer.Demo.csproj
+++ b/Lumbraco/Lumbraco.EPiServer.Demo/Lumbraco.EPiServer.Demo.csproj
@@ -251,6 +251,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CustomField.cs" />
     <Compile Include="Models\Pages\StartPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -277,6 +278,7 @@
     <Content Include="modules\_protected\EPiServer.Packaging.UI\web.config" />
     <Content Include="modules\_protected\EPiServer.Packaging.UI\EPiServer.Packaging.UI.zip" />
     <Content Include="Views\StartPage\Index.cshtml" />
+    <Content Include="LumbracoIndex.config" />
     <None Include="Properties\PublishProfiles\Dev.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
