--- a/Lumbraco/Lumbraco/Lumbraco.csproj
+++ b/Lumbraco/Lumbraco/Lumbraco.csproj
@@ -30,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Lucene.Net, Version=3.0.3.0, Culture=neutral, PublicKeyToken=85089178b9ac3181, processorArchitecture=MSIL">
+      <HintPath>..\packages\Lucene.Net.3.0.3\lib\NET40\Lucene.Net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -41,11 +49,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Index\Configuration.cs" />
-    <Compile Include="Index\IndexField.cs" />
-    <Compile Include="Index\IndexSet.cs" />
-    <Compile Include="Index\LumbracoIndexSet.cs" />
+    <Compile Include="FieldHelper.cs" />
+    <Compile Include="IComputedField.cs" />
+    <Compile Include="IIndexable.cs" />
+    <Compile Include="IndexService.cs" />
+    <Compile Include="IndexService\ComputedFieldIndexer.cs" />
+    <Compile Include="IndexService\Configuration.cs" />
+    <Compile Include="IndexService\CustomFieldIndexer.cs" />
+    <Compile Include="IndexService\DefaultIndexer.cs" />
+    <Compile Include="IndexService\IndexField.cs" />
+    <Compile Include="IndexService\IndexSet.cs" />
+    <Compile Include="IndexService\LumbracoIndexSet.cs" />
+    <Compile Include="IndexService\TypeIndexer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
