--- a/Lumbraco/Lumbraco/Lumbraco.Core.csproj
+++ b/Lumbraco/Lumbraco/Lumbraco.Core.csproj
@@ -49,9 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IndexConfig\BaseField.cs" />
     <Compile Include="IndexConfig\CustomField.cs" />
     <Compile Include="IndexConfig\DefaultField.cs" />
     <Compile Include="IndexConfig\IField.cs" />
+    <Compile Include="IndexService\FieldData.cs" />
     <Compile Include="IndexService\FieldHelper.cs" />
     <Compile Include="IndexService\IComputedField.cs" />
     <Compile Include="IndexService\IIndexable.cs" />
